--- a/src/main/resources/villagewars/game-view.fxml
+++ b/src/main/resources/villagewars/game-view.fxml
@@ -1,51 +1,285 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="903.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="villagewars.game.controller.GameController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="910.0" style="-fx-background-color: #432109; -fx-background-image: &quot;C:\Users\k-zwo\Downloads\medieval-battle-knights-armor-helmets-swords-axes-great-combat-armored-ancient-warriors-against-castle-160946237.jpg&quot;;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="villagewars.game.controller.GameController">
    <children>
-      <Label layoutX="765.0" layoutY="283.0" text="Army">
+      <Pane fx:id="ratthausPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="248.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="80.0" layoutY="14.0" prefHeight="35.0" prefWidth="107.0" text="Rathaus">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="60.0" prefHeight="17.0" prefWidth="84.0" text="Level:" />
+            <Label fx:id="rathausLevel" layoutX="56.0" layoutY="59.0" prefHeight="17.0" prefWidth="13.0" text="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="19.0" layoutY="105.0" text="Resources needed to level up:" />
+            <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="13.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="12.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="11.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+            <Button layoutX="86.0" layoutY="53.0" mnemonicParsing="false" onAction="#increaseRathausLevel" prefHeight="29.0" prefWidth="28.0" text="+" />
+            <Label fx:id="woodNeededForUpgrade" layoutX="49.0" layoutY="131.0" prefHeight="17.0" prefWidth="144.0" text="0" />
+            <Label fx:id="stoneNeededForUpgrade" layoutX="49.0" layoutY="168.0" text="0" />
+            <Label fx:id="foodNeededForUpgrade" layoutX="49.0" layoutY="205.0" text="0" />
+         </children>
+      </Pane>
+      <Label fx:id="pikemanNumber" layoutX="241.0" layoutY="15.0" text="0" textFill="#ebeaea" />
+      <Label fx:id="swordsmanNumber" layoutX="292.0" layoutY="16.0" text="0" textFill="#eeeded" />
+      <Label fx:id="axemanNumber" layoutX="340.0" layoutY="15.0" text="0" textFill="#f2eeee" />
+      <Label fx:id="attackPowerNumber" layoutX="480.0" layoutY="15.0" text="0" textFill="#f5f4f4" />
+      <Label fx:id="DefencePowerNumber" layoutX="545.0" layoutY="16.0" text="0" textFill="#f5f2f2" />
+      <Label fx:id="woodNumber" layoutX="34.0" layoutY="15.0" text="0" textFill="#f2f0f0" />
+      <Label fx:id="stoneNumber" layoutX="104.0" layoutY="15.0" text="0" textFill="#ebe7e7" />
+      <Label fx:id="foodNumber" layoutX="177.0" layoutY="15.0" text="0" textFill="#fcf9f9" />
+      <Label layoutX="710.0" layoutY="6.0" text="Nickname" textFill="#f5f3f3">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="717.0" layoutY="334.0" text="pikeman:" />
-      <Label layoutX="716.0" layoutY="370.0" text="swordsman:" />
-      <Label layoutX="719.0" layoutY="408.0" text="axeman:" />
-      <Label fx:id="pikemanNumber" layoutX="807.0" layoutY="334.0" text="0" />
-      <Label fx:id="swordsmanNumber" layoutX="807.0" layoutY="370.0" text="0" />
-      <Label fx:id="axemanNumber" layoutX="807.0" layoutY="408.0" text="0" />
-      <Button layoutX="847.0" layoutY="328.0" mnemonicParsing="false" onAction="#increasePikeman" prefHeight="29.0" prefWidth="28.0" text="+" />
-      <Button layoutX="847.0" layoutY="364.0" mnemonicParsing="false" onAction="#increaseSwordsman" prefHeight="29.0" prefWidth="28.0" text="+" />
-      <Button layoutX="847.0" layoutY="402.0" mnemonicParsing="false" onAction="#increaseAxeman" prefHeight="29.0" prefWidth="28.0" text="+" />
-      <Label layoutX="723.0" layoutY="490.0" prefHeight="17.0" prefWidth="84.0" text="DefencePower" />
-      <Label layoutX="722.0" layoutY="451.0" text="AttackPower" />
-      <Label fx:id="attackPowerNumber" layoutX="847.0" layoutY="451.0" text="0" />
-      <Label fx:id="DefencePowerNumber" layoutX="847.0" layoutY="490.0" text="0" />
-      <Label layoutX="721.0" layoutY="208.0" text="Wood" />
-      <Label layoutX="780.0" layoutY="208.0" text="Stone" />
-      <Label layoutX="829.0" layoutY="208.0" text="Food" />
-      <Label layoutX="742.0" layoutY="164.0" text="Resources">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="woodNumber" layoutX="734.0" layoutY="237.0" text="0" />
-      <Label fx:id="stoneNumber" layoutX="790.0" layoutY="237.0" text="0" />
-      <Label fx:id="foodNumber" layoutX="839.0" layoutY="237.0" text="0" />
-      <Label layoutX="721.0" layoutY="56.0" text="Rathaus Level">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="rathausLevel" layoutX="789.0" layoutY="99.0" text="1">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Button layoutX="866.0" layoutY="59.0" mnemonicParsing="false" onAction="#increaseRathausLevel" prefHeight="29.0" prefWidth="28.0" text="+" />
+      <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="139.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/jedzenie.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="74.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/kamien.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="7.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/drewno.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="31.0" fitWidth="44.0" layoutX="213.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/spearman.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="32.0" layoutX="260.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/swordsman.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="32.0" layoutX="308.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/axeman.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="29.0" fitWidth="30.0" layoutX="441.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/swords.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="44.0" layoutX="503.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/shield-icon.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="419.0" fitWidth="603.0" layoutX="14.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/wiocha.jpg" />
+         </image>
+      </ImageView>
+      <Button fx:id="mindButton" layoutX="28.0" layoutY="47.0" mnemonicParsing="false" onAction="#showMineDetails" prefHeight="41.0" prefWidth="92.0" style="-fx-cursor: hand; -fx-background-color: FF000000;" />
+      <Button fx:id="wareHouseButton" layoutX="171.0" layoutY="122.0" mnemonicParsing="false" onAction="#showWareHouseDetails" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: FF000000;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="farmButton" layoutX="275.0" layoutY="99.0" mnemonicParsing="false" onAction="#showFarmDetails" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: FF000000;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="barracksButton" layoutX="454.0" layoutY="169.0" mnemonicParsing="false" onAction="#showBarracksDetails" prefHeight="41.0" prefWidth="73.0" style="-fx-background-color: FF000000;" textFill="#0a0a0a">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="timberCampButton" layoutX="532.0" layoutY="380.0" mnemonicParsing="false" onAction="#showTimberCampDetails" prefHeight="41.0" prefWidth="63.0" style="-fx-background-color: FF000000;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="ratthausButton" layoutX="237.0" layoutY="185.0" mnemonicParsing="false" onAction="#showRathausDetails" prefHeight="80.0" prefWidth="107.0" style="-fx-background-color: FF000000;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Pane fx:id="barracksPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="80.0" layoutY="14.0" prefHeight="35.0" prefWidth="107.0" text="Barracks">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="110.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="149.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="194.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="44.0" layoutX="11.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/spearman2.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="32.0" layoutX="11.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/swordsman2.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="32.0" layoutX="14.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/axeman2.png" />
+               </image>
+            </ImageView>
+            <Button layoutX="43.0" layoutY="65.0" mnemonicParsing="false" onAction="#increasePikeman" prefHeight="29.0" prefWidth="66.0" text="Recruit" />
+            <Label layoutX="136.0" layoutY="71.0" text="50" />
+            <Label layoutX="181.0" layoutY="71.0" text="20" />
+            <Label layoutX="226.0" layoutY="71.0" text="10" />
+            <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="109.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="148.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="109.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="148.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="136.0" layoutY="120.0" text="40" />
+            <Label layoutX="181.0" layoutY="120.0" text="50" />
+            <Label layoutX="226.0" layoutY="120.0" text="20" />
+            <Label layoutX="137.0" layoutY="167.0" text="50" />
+            <Label layoutX="182.0" layoutY="167.0" text="50" />
+            <Label layoutX="227.0" layoutY="167.0" text="50" />
+            <Button layoutX="46.0" layoutY="114.0" mnemonicParsing="false" onAction="#increaseSwordsman" prefHeight="29.0" prefWidth="63.0" text="Recruit" />
+            <Button layoutX="46.0" layoutY="161.0" mnemonicParsing="false" onAction="#increaseAxeman" prefHeight="29.0" prefWidth="63.0" text="Recruit" />
+         </children>
+      </Pane>
+      <Pane fx:id="timberCampPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="54.0" layoutY="14.0" prefHeight="35.0" prefWidth="165.0" text="Timber Camp">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="141.0" fitWidth="196.0" layoutX="63.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane fx:id="minePane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="98.0" layoutY="14.0" prefHeight="35.0" prefWidth="165.0" text="Mine">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="141.0" fitWidth="132.0" layoutX="61.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane fx:id="farmPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="98.0" layoutY="14.0" prefHeight="35.0" prefWidth="165.0" text="Farm">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="129.0" fitWidth="132.0" layoutX="61.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane fx:id="wareHousePane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
+         <children>
+            <Label layoutX="67.0" layoutY="14.0" prefHeight="35.0" prefWidth="165.0" text="Warehouse">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="woodNumber1" layoutX="62.0" layoutY="134.0" text="0" textFill="#0d0d0d" />
+            <Label fx:id="stoneNumber1" layoutX="132.0" layoutY="134.0" text="0" />
+            <Label fx:id="foodNumber1" layoutX="205.0" layoutY="134.0" text="0" textFill="#fcf9f9" />
+            <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="167.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/jedzenie.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="35.0" fitWidth="30.0" layoutX="102.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/kamien.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="35.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/drewno.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="foodNumber2" layoutX="199.0" layoutY="135.0" text="0" textFill="#0d0d0d" />
+            <Label layoutX="80.0" layoutY="96.0" text="Current resources" />
+         </children>
+      </Pane>
    </children>
 </Pane>
