--- a/src/main/resources/villagewars/game-view.fxml
+++ b/src/main/resources/villagewars/game-view.fxml
@@ -10,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="910.0" style="-fx-background-color: #432109; -fx-background-image: &quot;C:\Users\k-zwo\Downloads\medieval-battle-knights-armor-helmets-swords-axes-great-combat-armored-ancient-warriors-against-castle-160946237.jpg&quot;;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="villagewars.game.controller.GameController">
    <children>
-      <Pane fx:id="ratthausPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="248.0" style="-fx-background-color: white;">
+      <Pane fx:id="ratthausPane" layoutX="639.0" layoutY="47.0" prefHeight="244.0" prefWidth="254.0" style="-fx-background-color: white;">
          <children>
             <Label layoutX="80.0" layoutY="14.0" prefHeight="35.0" prefWidth="107.0" text="Rathaus">
                <font>
@@ -281,5 +281,20 @@
             <Label layoutX="80.0" layoutY="96.0" text="Current resources" />
          </children>
       </Pane>
+      <ImageView fitHeight="150.0" fitWidth="254.0" layoutX="639.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@gameImages/mapa.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="700.0" layoutY="373.0" text="Mapa świata" textFill="#f2eeee">
+         <font>
+            <Font name="System Bold Italic" size="24.0" />
+         </font>
+      </Label>
+      <Button layoutX="639.0" layoutY="322.0" mnemonicParsing="false" onAction="#goToWorldsMap" prefHeight="137.0" prefWidth="248.0" style="-fx-background-color: FF000000;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </Pane>
