--- a/src/main/resources/villagewars/map-view.fxml
+++ b/src/main/resources/villagewars/map-view.fxml
@@ -68,28 +68,6 @@
             <Image url="@gameImages/shield-icon.png" />
          </image>
       </ImageView>
-      <GridPane layoutX="86.0" layoutY="51.0" prefHeight="326.0" prefWidth="492.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
       <Button layoutX="715.0" layoutY="258.0" mnemonicParsing="false" onAction="#attackPlayer" prefHeight="25.0" prefWidth="106.0" text="Attack" />
       <Label fx:id="enemyNickname" layoutX="715.0" layoutY="125.0" text="Nickname" textFill="#f5f3f3">
          <font>
@@ -126,5 +104,58 @@
             <Image url="@gameImages/shield-icon.png" />
          </image>
       </ImageView>
+      <GridPane layoutX="143.0" layoutY="81.0" prefHeight="267.0" prefWidth="413.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fx:id="village1" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="village2" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="village3" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="village4" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="village5" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="village6" fitHeight="63.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@gameImages/wiocha.jpg" />
+               </image>
+            </ImageView>
+            <Button fx:id="village1Bth" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="village2Btn" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;" GridPane.columnIndex="1" />
+            <Button fx:id="village3Btn" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;" GridPane.columnIndex="2" />
+            <Button fx:id="village4Btn" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;" GridPane.rowIndex="1" />
+            <Button fx:id="village5Btn" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="village6Btn" mnemonicParsing="false" onAction="#showVillage" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: FF000000;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
